display digit 1 on the screen when clicked

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 <body>
     <div class="main">
-        <div class="screen">a</div>
+        <span class="screen">23</span>
         <div class="calc">
             <div class="numbers">
-                <button class="digit">1</button>
-                <button class="digit">2</button>
-                <button class="digit">3</button>
-                <button class="digit">4</button>
-                <button class="digit">5</button>
-                <button class="digit">6</button>
+                
                 <button class="digit">7</button>
                 <button class="digit">8</button>
                 <button class="digit">9</button>
+                <button class="digit">4</button>
+                <button class="digit">5</button>
+                <button class="digit">6</button>
+                <button class="digit one">1</button>
+                <button class="digit">2</button>
+                <button class="digit">3</button>
                 <button class="digit zero">0</button>
                 <button class="digit clear">Clear</button>
                 <button class="digit equal">=</button>
