display 0 as default, when 1 is pressed, replace it with 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="main">
-        <span class="screen">23</span>
+        <span class="screen"></span>
         <div class="calc">
             <div class="numbers">
                 
