--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div class="calc">
             <div class="numbers">
                 
-                <button class="digit">7</button>
-                <button class="digit">8</button>
-                <button class="digit">9</button>
-                <button class="digit">4</button>
-                <button class="digit">5</button>
-                <button class="digit">6</button>
+                <button class="digit seven">7</button>
+                <button class="digit eight">8</button>
+                <button class="digit nine">9</button>
+                <button class="digit four">4</button>
+                <button class="digit five">5</button>
+                <button class="digit six">6</button>
                 <button class="digit one">1</button>
-                <button class="digit">2</button>
-                <button class="digit">3</button>
+                <button class="digit two">2</button>
+                <button class="digit three">3</button>
                 <button class="digit zero">0</button>
                 <button class="digit clear">Clear</button>
                 <button class="digit equal">=</button>
