firstOperator is equal to screen.textContent of 1,2,3

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <button class="digit equal">=</button>
             </div>
             <div class="operators">
-                <button class="oper">+</button>
-                <button class="oper">-</button>
-                <button class="oper">*</button>
-                <button class="oper">/</button>
+                <button class="oper plus">+</button>
+                <button class="oper minus">-</button>
+                <button class="oper multiply">×</button>
+                <button class="oper divide">/</button>
             </div>
 
         </div>
